--- a/appinfo.json
+++ b/appinfo.json
@@ -4,7 +4,7 @@
   "longName": "Clipped 2.0",
   "companyName": "Jnm",
   "versionCode": 2,
-  "versionLabel": "2.0.2",
+  "versionLabel": "2.0.3",
   "watchapp": {
     "watchface": true
   },
@@ -25,10 +25,9 @@
         "file": "images/menu_icon.png"
       },
       {
-        "characterRegex": "[ 0-9a-z]",
         "type": "font",
         "name": "FONT_BORIS_37",
-        "file": "fonts/BorisBlackBloxx-subset.ttf"
+        "file": "fonts/BorisBlackBloxx.ttf"
       },
       {
         "type": "png",
