--- a/appinfo.json
+++ b/appinfo.json
@@ -4,7 +4,7 @@
   "longName": "Clipped 2.0",
   "companyName": "Jnm",
   "versionCode": 2,
-  "versionLabel": "2.0.4",
+  "versionLabel": "2.1.0",
   "watchapp": {
     "watchface": true
   },
@@ -14,7 +14,8 @@
   	"weekday":		91,
 	"lang":			92,
 	"bigminutes":	93,
-	"showdate":		94
+	"showdate":		94,
+	"negative":		95
   },
   "resources": {
     "media": [
